<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            app:cardBackgroundColor="#ededed"

            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_workway" />


        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/blue_circularbutton"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"

                android:hint="@string/mail"
                android:minWidth="150dp"
                android:paddingStart="@dimen/medium"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:textColor="#000"
                android:textColorHint="#000000"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"

                android:layout_centerVertical="true"
                android:padding="7dp"
                android:paddingEnd="@dimen/medium"
                android:src="@drawable/user_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/blue_circularbutton"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:minWidth="150dp"
                android:paddingStart="@dimen/medium"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:textColor="#000"
                android:textColorHint="#000000"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="7dp"
                android:paddingEnd="@dimen/medium"
                android:src="@drawable/pass_icon" />
        </RelativeLayout>

        <TextView
            android:id="@+id/forgotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/_40sdp"

            android:textColor="#000000"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"

            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="@dimen/_10sdp"


            android:background="@drawable/button"
            android:text="@string/login1"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_30sdp"

        android:id="@+id/register"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg2"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/registerr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#3172E3"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>



</RelativeLayout>